--- a/curve_fit.ipynb
+++ b/curve_fit.ipynb
@@ -70,7 +70,7 @@
     "params,params_cov=optimize.curve_fit(gfp_fit_v1,x,y,p0=[92000.0,20.0,0.0,0.0],bounds=([0,0,0,0],[np.inf,np.inf,np.inf,y[-1]]))\n",
     "ax.plot(np.log10(x+1e-2),gfp_fit_v1(x,params[0],params[1],params[2],params[3]),ls='--')\n",
     "plt.show()\n",
-    "print params"
+    "print(params)"
    ]
   },
   {
