gfp_fit_v2 updated

--- a/curve_fit.ipynb
+++ b/curve_fit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -15,19 +15,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "x=np.array([5.86,2.93,1.465,0.7325,0.36625,0.183125,0.091563,0.045781,0.022891,0.011445,0.005723,0])\n",
-    "y=np.array([91523.7,90715.8,87582.3,71583.8,51311,34180.9,30596.2,29253.2,30259.8,26771.3,26320.3,25208.3])"
+    "#x=np.array([5.86,2.93,1.465,0.7325,0.36625,0.183125,0.091563,0.045781,0.022891,0.011445,0.005723,0])\n",
+    "#y=np.array([91523.7,90715.8,87582.3,71583.8,51311,34180.9,30596.2,29253.2,30259.8,26771.3,26320.3,25208.3])\n",
+    "\n",
+    "x=np.array([400,133.3333333,44.44444444,14.81481481,4.938271605,1.646090535,0.548696845,0.182898948,0.060966316,0.020322105,0.0067740350])\n",
+    "y=np.array([102172.4667,89830.43333,72608.56667,55563.96667,31565.4,23711.1,22009.26667,21549.7,21397.53333,21825.3,22435.86667\n",
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-25-9fa3039f283e>, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-9fa3039f283e>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    0\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=np.array([400,133.3333333,44.44444444,14.81481481\n",
+    ",4.938271605\n",
+    ",1.646090535\n",
+    ",0.548696845\n",
+    ",0.182898948\n",
+    ",0.060966316\n",
+    ",0.020322105\n",
+    ",0.006774035\n",
+    "0\n",
+    "])\n",
+    "y=np.array([90789.96667\n",
+    ",102172.4667\n",
+    ",89830.43333\n",
+    ",72608.56667\n",
+    ",55563.96667\n",
+    ",31565.4\n",
+    ",23711.1\n",
+    ",22009.26667\n",
+    ",21549.7\n",
+    ",21397.53333\n",
+    ",21825.3\n",
+    ",22435.86667\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -35,6 +81,10 @@
    "source": [
     "def gfp_fit_v1(x, Zmax, Keff, neff, beta):\n",
     "    gfp=Zmax*(x/Keff)**neff/(1.0+(x/Keff)**neff)+beta\n",
+    "    return gfp\n",
+    "\n",
+    "def gfp_fit_v2(x,Zmax,K1,m1,beta,C):\n",
+    "    gfp=Zmax*(x/K1)**m1/(1+(x/K1)**m1+C)/(1+C)+beta\n",
     "    return gfp"
    ]
   },
@@ -71,6 +121,41 @@
     "ax.plot(np.log10(x+1e-2),gfp_fit_v1(x,params[0],params[1],params[2],params[3]),ls='--')\n",
     "plt.show()\n",
     "print(params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAY0AAAD8CAYAAACLrvgBAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xl8VfWd//HXJyuELSwBkRCCEhfEipIiLrWuCE5brKOO\nlhbaOpPWYqfrtFimdaplRjudOrWLllZ/6ogLdcW6UIpLbStKQGQViSwhgBANeyDb/fz+uN/oFQIJ\n2U6S+34+Hvdx7/mc7zn3kyvmk+/5fu/5mrsjIiLSFClRJyAiIp2HioaIiDSZioaIiDSZioaIiDSZ\nioaIiDSZioaIiDSZioaIiDSZioaIiDSZioaIiDRZWtQJtLYBAwZ4fn5+1GmIiHQqixcvfs/dcxpr\n1+WKRn5+PsXFxVGnISLSqZjZxqa00+UpERFpMhUNERFpMhUNERFpMhUNERFpMhUNERFpMhUNEZFO\nbPZsyM+HlJT48+zZbft+XW7KrYhIspg9G4qKoLIyvr1xY3wbYPLktnlP9TRERDqpGTM+LBj1Kivj\n8baioiEi0kmVlh5dvDWoaIiIdFJ5eUcXbw2NFg0zu8fMtpvZioRYPzObb2Zrw3PfEDczu8PMSsxs\nmZmdkXDM1NB+rZlNTYiPMbPl4Zg7zMyO9B4iIhI3cyZkZX00lpUVj7eVpvQ07gUmHBSbDixw9wJg\nQdgGmAgUhEcRcCfECwBwE3AmMBa4KaEI3Bna1h83oZH3EBER4oPds2bBsJP3k5JZy7Bh8e22GgSH\nJhQNd/8LUHFQeBJwX3h9H3B5Qvx+j1sIZJvZYOBSYL67V7j7DmA+MCHs6+3ur7q7A/cfdK6G3kNE\nRIC6mFOTv56sK1/mPx59mw0b2rZgQPOn3A5y960A7r7VzAaG+BBgU0K7shA7UrysgfiR3kNEJOmt\n3baH7z+2jCWlOznvhBy+eHZ+u7xva39PwxqIeTPiR/emZkXEL3GR15YjQCIiHcCTb2zm3x59k56Z\nadz+T6dx+eghhOHgNtfc2VPbwqUlwvP2EC8Dhia0ywW2NBLPbSB+pPc4hLvPcvdCdy/MyWl0DRER\nkU4pFov/TT16aDafPu1Y5n/7k3z29Nx2KxjQ/KIxF6ifATUVeCohPiXMohoH7AqXmOYB482sbxgA\nHw/MC/v2mNm4MGtqykHnaug9RESSyr6qWn789Equn70Ydyd/QA9+fvVoBvTMbPdcGr08ZWYPAecD\nA8ysjPgsqFuBOWZ2HVAKXBWaPwtcBpQAlcCXANy9wsxuARaFdje7e/3g+vXEZ2h1B54LD47wHiIi\nSePlt8v5wePL2bxzP1POGkZtzElPbb+excEsPmmp6ygsLHQt9yoind3OympufnoVj7+xmeNzenDb\nP36Mwvx+bfZ+ZrbY3Qsba6cbFoqIdFCvrnuff71wBF+7YATd0lOjTgdQ0RAR6TC27NzPPX9dz/SJ\nJ5GdlcEL3zmf7hkdo1jUU9EQEYlYLObMfm0jtz2/hrqYM2n0EE7N7dPhCgaoaIiIRKpk+16mP7aM\n4o07+ETBAP7zs6cytF9W4wdGREVDRCQi7s43Hn6DzTv38z9XncYVZ7Tfl/SaS0VDRKSdvblpJ8cP\n7Bm+0T2avlkZ5PRq/+9cNIfW0xARaSeV1bXc8sdVfPY3f+POl0oAOGFQr05TMEA9DRGRdvHK2nJ+\n8MRyNlXs5/Pj8vjqJ4+POqVmUdEQEWljv39lHT95ZjXHDejBnK+cxdjhbfclvbamoiEi0gbcnQM1\nMbpnpHLJyEHs2l/DtA70Jb3mUtEQEWllW3ft54dPxlfI/t2UQob178F3xp8YcVatQ0VDRKSVxGLO\n7NdLue25t6iNxfju+BNxhw4+i/aoqGiIiLSCzTv3862Hl/L6hgrOGdGf//rsx8jr33G/pNdcKhoi\nIq2gR0Yq7++r4qdXfoyrxrTvwkjtSUVDRKSZ3J0/FJfxmdHHkp2VwZ++9UlSU7pmsajXoi/3mdk3\nzGyFma00s2+GWD8zm29ma8Nz3xA3M7vDzErMbJmZnZFwnqmh/Vozm5oQH2Nmy8Mxd1hXLd0i0ind\n/+pGvvfYMp54YzNAly8Y0IKiYWajgH8BxgKnAZ8yswJgOrDA3QuABWEbYCJQEB5FwJ3hPP2IrwZ4\nZjjXTfWFJrQpSjhuQnPzFRFpTUtKd3Dz06tg80AmjxtKfj7Mnh11Vm2vJT2Nk4GF7l7p7rXAy8Bn\ngUnAfaHNfcDl4fUk4H6PWwhkm9lg4FJgvrtXuPsOYD4wIezr7e6venx5wfsTziUiEpn391bxpd8t\noXpnNzb9YTTuxsaNUFTU9QtHS4rGCuA8M+tvZlnE1wYfCgxy960A4XlgaD8E2JRwfFmIHSle1kBc\nRCRSP3hiObsOVLP9iTHEqtI/iFdWwowZESbWDppdNNx9NXAb8Z7B88CbQO0RDmnoYp83I37oic2K\nzKzYzIrLy8uPmLeISEv926UnUf70aKq39TlkX2lpBAm1oxYNhLv73e5+hrufB1QAa4Ft4dIS4Xl7\naF5GvCdSLxfY0kg8t4F4Q3nMcvdCdy/MyclpyY8kInJYm3fux90ZMbAnOQcGN9gmL6+dk2pnLZ09\nNTA85wFXAA8Bc4H6GVBTgafC67nAlDCLahywK1y+mgeMN7O+YQB8PDAv7NtjZuPCrKkpCecSEWlX\nmyoquewXr/CLBWsBmDkTsg767l5WVjzelbX0exqPmVl/oAaY5u47zOxWYI6ZXQeUAleFts8SH/co\nASqBLwG4e4WZ3QIsCu1udveK8Pp64F6gO/BceIiItKsDNXVcP3sxMXc+e3p8aHXy5Pi+GTPil6Ty\n8uIFoz7eVVl8YlLXUVhY6MXFxVGnISJdyI2PL+eh10v53ZRCLhk5KOp02oSZLXb3wsbaaeU+EZEj\n+EPxJh56vZTrzz++yxaMo6GiISJyBAN6ZjJx1DF855ITok6lQ9C9p0REGuDumBkXnDSQC04a2PgB\nSUI9DRGRg7g70x5cwu9fWRd1Kh2OioaIyEFm/WUdzy5/t8ve3rwlVDRERBK8+s773Pb8W/zDqYP5\n8jn5UafT4ahoiIgE23Yf4OsPvUH+gB7c+o+nqqfRABUNEZFg4br3qaqp467Pj6FXt/TGD0hCmj0l\nIhJMGj2E8wpy6NsjI+pUOiz1NEQk6c1ftY2X1sTvraqCcWTqaYhIUltXvpdvPbKUEwb15LyCHFKS\nYMnWllBPQ0SSVmV1Ldc/sIT0VONXnztDBaMJ1NMQkaTk7sx4YgVvb9/D/V8ey7HZ3aNOqVNQT0NE\nktJf1r7HE29s5lsXn8AnCrR4W1OppyEiSem8ggHc9fkxjNeda4+KehoiklQq9lWzrnwvZsaEUcdo\nHOMotXS512+Z2UozW2FmD5lZNzMbbmavmdlaM3vEzDJC28ywXRL25yec58YQX2NmlybEJ4RYiZlN\nb0muIiJ1MeebjyzlqrteZV9VbdTpdErNLhpmNgT4V6DQ3UcBqcA1wG3A7e5eAOwArguHXAfscPcR\nwO2hHWY2Mhx3CjAB+I2ZpZpZKvBrYCIwErg2tBURaZZfvrCWv7xdznfGn0iPTF2db46WXp5KA7qb\nWRqQBWwFLgQeDfvvAy4PryeFbcL+iyx+Y5dJwMPuXuXu64mvIT42PErcfZ27VwMPh7YiIkftpTXb\n+cWCtVxxxhCuHTs06nQ6rWYXDXffDPwMKCVeLHYBi4Gd7l7f7ysDhoTXQ4BN4dja0L5/YvygYw4X\nP4SZFZlZsZkVl5eXN/dHEpEuasvO/XzzkaWcOKgXMy/XjQhboiWXp/oS/8t/OHAs0IP4paSDef0h\nh9l3tPFDg+6z3L3Q3QtzcjR1TkQ+ql+PDCaddix3fn4M3TNSo06nU2vJRb2LgfXuXg5gZo8DZwPZ\nZpYWehO5wJbQvgwYCpSFy1l9gIqEeL3EYw4XFxFpkgM1dXRLT+XHk0ZFnUqX0JIxjVJgnJllhbGJ\ni4BVwIvAlaHNVOCp8Hpu2Cbsf8HdPcSvCbOrhgMFwOvAIqAgzMbKID5YPrcF+YpIknnijTIm/uIV\ntu7aH3UqXUazexru/pqZPQosAWqBN4BZwDPAw2b2kxC7OxxyN/B/ZlZCvIdxTTjPSjObQ7zg1ALT\n3L0OwMxuAOYRn5l1j7uvbG6+IpJc3np3Nzc+vpyP5WaT0zMz6nS6DIv/sd91FBYWenFxcdRpiEiE\n9hyo4TO/+ht7q2p55uvnMrB3t6hT6vDMbLG7FzbWThOVRaRLcXe+9+gySisqefCfz1TBaGW6jYiI\ndCl7q2rZtvsA359wImce1z/qdLoc9TREpEvp1S2dR75yFmm6p1SbUE9DRLqE7XsO8O05S9mxr5r0\n1BR9ga+NqGiISKdXWxfj6w++wbPLt7Jtz4Go0+nSdHlKRDq9//7TGl5bX8HPrz6Nk47pHXU6XZp6\nGiLSqc1b+S6/fXkdk8/M44ozcqNOp8tT0RCRTqsu5vzPn9bwsdw+/OjTWjmhPejylIh0WqkpxoP/\nMo7q2hiZaboRYXtQT0NEOqXb795D/vAYA3tncvbo7syeHXVGyUFFQ0Q6nd/fX8Ptyxay56QVuMPG\njVBUhApHO1DREJFO5ydPrsEyq9mzOP+DWGUlzJgRXU7JQkVDRDqVlVt24SM2sueNYdSUf3R6bWlp\nREklERUNEek0YjHnR0+txKoz2PnKiYfsz8uLIKkko6IhIp3Ge/uq2HugliuOP4nuqekf2ZeVBTNn\nRpRYEmnJGuEnmtnShMduM/ummfUzs/lmtjY89w3tzczuMLMSM1tmZmcknGtqaL/WzKYmxMeY2fJw\nzB2mm8mIJLWBvbrxx389l59Ny2XWLBg2DMziz7NmweTJUWfY9TW7aLj7Gncf7e6jgTFAJfAEMB1Y\n4O4FwIKwDTCR+FKuBUARcCeAmfUDbgLOBMYCN9UXmtCmKOG4Cc3NV0Q6t+dXvMvuAzWkp6aQkmJM\nngwbNkAsFn9WwWgfrXV56iLgHXffCEwC7gvx+4DLw+tJwP0etxDINrPBwKXAfHevcPcdwHxgQtjX\n291fDWuJ359wLhFJIqu37uZrsxfzywVro04l6bVW0bgGeCi8HuTuWwHC88AQHwJsSjimLMSOFC9r\nIC4iScTd+dFTK+jTPZ1pF4yIOp2k1+KiYWYZwGeAPzTWtIGYNyPeUA5FZlZsZsXl5eWNpCEincmT\nSzezaMMOvjfhJLKzMqJOJ+m1Rk9jIrDE3beF7W3h0hLheXuIlwFDE47LBbY0Es9tIH4Id5/l7oXu\nXpiTk9PCH0dEOoo9B2r4z2ff4rTcPvxT4dDGD5A21xpF41o+vDQFMBeonwE1FXgqIT4lzKIaB+wK\nl6/mAePNrG8YAB8PzAv79pjZuDBrakrCuUQkCVRW13HqkD7cPGkUKVq+tUNo0V1uzSwLuAT4SkL4\nVmCOmV0HlAJXhfizwGVACfGZVl8CcPcKM7sFWBTa3ezuFeH19cC9QHfgufAQkSQxqHc37vnix6NO\nQxJYfGJS11FYWOjFxcVRpyEiLeDu3D7/ba4qHMrQfllRp5MUzGyxuxc21k7fCBeRDmfum1u444US\nXn5bE1s6GhUNEelQ9lbV8p/PrmbUkN5cO1Y3k+potHKfiHQodyxYy7bdVdz5+TGkavC7w1FPQ0Q6\njLXb9nDPX9dzdWEuZ+T1bfwAaXfqaYhIh5HTK5MpZ+Uz7YLjo05FDkNFQ0Q6jOysDH706ZFRpyFH\noMtTIhK5fVW1XHfvIpaX7Yo6FWmEioaIRO5XL5aw4K3tVNfVRZ2KNEJFQ0Qi9U75Xn7/yjr+8Yxc\nxgzrF3U60ggVDRGJjLvzH3NX0i09lekTT4o6HWkCFQ0RicyLa7bzytr3+PYlJ5DTKzPqdKQJNHtK\nRCJz7ogcbr3iVK4ck9t4Y+kQVDREJBJ1MScjLYVrdKuQTkWXp0Sk3a1/bx/n/+xFijdUNN5YOhQV\nDRFpV+7Oj59eyY59NeTptuedTouKhpllm9mjZvaWma02s7PMrJ+ZzTezteG5b2hrZnaHmZWY2TIz\nOyPhPFND+7VmNjUhPsbMlodj7ggr+IlIJzZ/1TZeWlPONy8uYGDvblGnI0eppT2NXwDPu/tJwGnA\namA6sMDdC4AFYRvia4kXhEcRcCeAmfUDbgLOBMYCN9UXmtCmKOG4CS3MV0QidKCmjpv/uIoTBvVk\n6tn5UacjzdDsomFmvYHzgLsB3L3a3XcCk4D7QrP7gMvD60nA/R63EMg2s8HApcB8d69w9x3AfGBC\n2Nfb3V/1+PKC9yecS0Q6oaff3ELZjv3cPGkU6am6Ot4ZtWT21HFAOfD/zOw0YDHwDWCQu28FcPet\nZjYwtB8CbEo4vizEjhQvayAuIp3UlWNyOX5gT932vBNrSalPA84A7nT304F9fHgpqiENjUd4M+KH\nntisyMyKzay4vFzLQ4p0RO/trcLMVDA6uZYUjTKgzN1fC9uPEi8i28KlJcLz9oT2QxOOzwW2NBLP\nbSB+CHef5e6F7l6Yk5PTgh9JRNrCgtXbOPe2F1hSuiPqVKSFml003P1dYJOZnRhCFwGrgLlA/Qyo\nqcBT4fVcYEqYRTUO2BUuY80DxptZ3zAAPh6YF/btMbNxYdbUlIRziUgncaCmjh8/vYrcvlmcOqRP\n1OlIC7X0G+FfB2abWQawDvgS8UI0x8yuA0qBq0LbZ4HLgBKgMrTF3SvM7BZgUWh3s7vXf+PneuBe\noDvwXHiISCfy25fXUVpRyYP/fKYGv7uAFhUNd18KFDaw66IG2jow7TDnuQe4p4F4MTCqJTmKSHQ2\nVVTym5dK+IePDebsEQOiTkdagcq+iLSZV9a+R3pqCjMuOznqVKSV6IaFItJmPndmHhNGHUO/HhlR\npyKtRD0NEWl1VbV1LCvbCaCC0cWoaIjIUZs9G/LzISUl/jx79kf3/+4v65j067+xdtueKNKTNqTL\nUyJyVGbPhqIiqKyMb2/cGN8GmDwZynZU8qsXS7h05DEUDOoVXaLSJtTTEJGjMmPGhwWjXmVlPA4w\n85nVAPzw0yPbOTNpDyoaInJUSksPH39lbTnPrXiXGy4YwZDs7u2bmLQLFQ0ROSp5h1mdNS8Ptu46\nwMjBvfmX845r36Sk3ahoiMhRmTkTsg5acC8rKx6/unAoT3/9XDLTUqNJTtqcioaIHJXJk2HWLBg2\nDMziz//96/30OXUL7k5qihbY7MpUNETkqE2eDBs2QCwWf16ZsZrvzHmT7Xuqok5N2piKhoi0yN9K\n3uOZZVv52vkjGKQ1v7s8FQ0Rabbq2hg3zV1JXr8svvJJDX4nAxUNEWm2e/++npLte7np0yPplq7B\n72SgoiEizZbXL4trx+Zx0cmDok5F2oluIyIizTZh1GAmjBocdRrSjlrU0zCzDWa23MyWmllxiPUz\ns/lmtjY89w1xM7M7zKzEzJaZ2RkJ55ka2q81s6kJ8THh/CXhWM3lE+kA/u/VDfz6xRLia6tJMmmN\ny1MXuPtod69fwW86sMDdC4AFYRtgIlAQHkXAnRAvMsBNwJnAWOCm+kIT2hQlHDehFfIVkRZ4fX0F\nP356FUs27kA1I/m0xZjGJOC+8Po+4PKE+P0etxDINrPBwKXAfHevcPcdwHxgQtjX291fDUvF3p9w\nLhGJwLu7DvC12YvJ65fF7deMJkVf5Es6LS0aDvzJzBabWbg5MoPcfStAeB4Y4kOATQnHloXYkeJl\nDcQPYWZFZlZsZsXl5eUt/JFEpCFVtXV89YHF7K+u47dfGEPvbulRpyQRaOlA+DnuvsXMBgLzzeyt\nI7Rt6E8Sb0b80KD7LGAWQGFhoTrMIm1g0fodrNi8i1997nStk5HEWtTTcPct4Xk78ATxMYlt4dIS\n4Xl7aF4GDE04PBfY0kg8t4G4iETg3IIBvPjd8zVbKsk1u2iYWQ8z61X/GhgPrADmAvUzoKYCT4XX\nc4EpYRbVOGBXuHw1DxhvZn3DAPh4YF7Yt8fMxoVZU1MSziUi7WRJ6Q7+vGobAEP7ZTXSWrq6llye\nGgQ8EWbBpgEPuvvzZrYImGNm1wGlwFWh/bPAZUAJUAl8CcDdK8zsFmBRaHezu1eE19cD9wLdgefC\nQ0TayfY9B7j+gcV0T0/lvBNyyEjT94GTnXW1edaFhYVeXFwcdRoinV51bYzJv1/Iis27efxrZ3Py\n4N5RpyRtyMwWJ3x14rD0jXARadDMZ1axaMMO7rj2dBUM+YD6miJyiNfXV3Dfqxv5l08M5zOnHRt1\nOtKBqKchIof4eH5f7vr8GVysGxHKQdTTEJEPvL+3irXb9mBmTBg1mLRU/YqQj9K/CBEBoLYuxrQH\nl3DNrIVUVtdGnY50UCoaIgLAfz33FgvXVfCDy04mK0NXrqVhKhoiwlNLN3P3X9fzxbPz+ccxuY0f\nIElLRUMkya3dtofvP7aMsfn9mPEPJ0edjnRw6oOKJLm8/ll88ezhfPncfNI18C2NUNEQSVJ1MWdv\nVS19uqczfeJJUacjnYT+rBBJUj/70xo+/cu/squyJupUpBNR0RBJQs8u38qdL73DuQUD6JOlxZSk\n6VQ0RJLM29v28N0/vMnpednc9OmRUacjnYyKhkgS2bW/hqL7i+mRmcZdnx9DZlpq1ClJJ6OBcJEk\nUlMX49js7nzrkhMY1Ltb1OlIJ9TinoaZpZrZG2b2x7A93MxeM7O1ZvaImWWEeGbYLgn78xPOcWOI\nrzGzSxPiE0KsxMymtzRXkWTm7gzomcnsfz6Tj+f3izod6aRa4/LUN4DVCdu3Abe7ewGwA7guxK8D\ndrj7COD20A4zGwlcA5wCTAB+EwpRKvBrYCIwErg2tBWRozR/1Ta+cPfr7KqsIay2KdIsLSoaZpYL\n/APw+7BtwIXAo6HJfcDl4fWksE3Yf1FoPwl42N2r3H098eVgx4ZHibuvc/dq4OHQVkSOwjvle/nW\nI0vZfaCGzHQNY0rLtPRf0P8C3wNiYbs/sNPd62+RWQYMCa+HAJsAwv5dof0H8YOOOVz8EGZWZGbF\nZlZcXl7ewh9JpOvYcyA+8J2ZlsJdnx9Dt3QNfEvLNLtomNmngO3uvjgx3EBTb2Tf0cYPDbrPcvdC\ndy/Myck5QtYiySMWc777hzfZ8H4lv/rcGRyb3T3qlKQLaMnsqXOAz5jZZUA3oDfxnke2maWF3kQu\nsCW0LwOGAmVmlgb0ASoS4vUSjzlcXEQaUb63ihWbd/ODy07mrOP7R52OdBHN7mm4+43unuvu+cQH\nsl9w98nAi8CVodlU4Knwem7YJux/wd09xK8Js6uGAwXA68AioCDMxsoI7zG3ufmKJJtBvbvx3Dc/\nwZfPyY86FelC2mJU7PvAt82shPiYxd0hfjfQP8S/DUwHcPeVwBxgFfA8MM3d60JP5QZgHvHZWXNC\nWxE5gg3v7ePW596ipi5G727pmi0lrcrif+x3HYWFhV5cXBx1GiKR2FdVyxW/+Tvb9hzgmX/9BEM0\njiFNZGaL3b2wsXaafyfSRbg733tsGWu37+GX156ugiFtQkVDpIuY9Zd1PLNsK/926Ul8okCzCKVt\nqGiIdAEV+6r55QslXHbqMXz1k8dFnY50YbphoUgX0K9HBo9dfza5fbtr4FvalHoaIp3YgZo6nl2+\nFYATj+lFj0z9HShtS0VDpJNyd258fDnTHlzCW+/ujjodSRIqGiKd1L1/38ATb2zm2xefwEnH9I46\nHUkSKhoindDCde/zk2dWc8nIQUy7YETU6UgSUdEQ6WQO1NRxw4NLGNY/i59ffRopKRr4lvajUTOR\nTmJTRSVD+2XRLT2V6RNPZmx+P3p1S486LUky6mmIdHD7qmqZ+cwqzv/ZSyxYvQ2AK8fkktc/K+LM\nJBmppyHSQbk781Zu48dPr2TrrgNcO3YoZ+T1jTotSXLqaYh0UN/9wzK++sBi+nRP57Hrz+a/rvgY\nfXtkMHs25OdDSkr8efbsqDOVZKKehkgHUl0bIzXFSE0xzjthACcP7sUXz84nLTX+993s2VBUBJWV\n8fYbN8a3ASZPjihpSSq6NbpIB/HqO+/z708uZ8pZ+Uw9O7/BNvn58UJxsGHDYMOGtsxOuro2vzW6\nmXUzs9fN7E0zW2lmPw7x4Wb2mpmtNbNHwqp7hJX5HjGzkrA/P+FcN4b4GjO7NCE+IcRKzGx6c3MV\n6cje21vFtx9ZyrW/W0h1XYzhA3octm1p6dHFRVpbSy5PVQEXuvteM0sH/mpmzxFfle92d3/YzO4C\nrgPuDM873H2EmV0D3Ab8k5mNJL6U6ynAscCfzeyE8B6/Bi4hvo74IjOb6+6rWpCzSIfyzLKt3Pj4\nMvbX1PH1C0cw7YIRdEtPPWz7vLyGexp5eW2YpEiClqwR7u6+N2ymh4cDFwKPhvh9wOXh9aSwTdh/\nkcVvxzkJeNjdq9x9PVACjA2PEndf5+7VwMOhrUinV39ZuG+PdEYN6cNz3ziP74w/8YgFA2DmTMg6\naKZtVlY8LtIeWjQQbmapwGJgBPFewTvAzrC+N8R7CEPC6yHAJgB3rzWzXcTXEB8CLEw4beIxmw6K\nn9mSfEWitudADf/zp7fJTE/hxoknc/bxAzjruP5Nvp15/WD3jBnxS1J5efGCoUFwaS8tKhruXgeM\nNrNs4Ang5IaaheeG/q/wI8Qb6gU1OGpvZkVAEUCe+unSAbk7zyzfys1Pr6J8bxVTz8rH3TGzo17/\nYvJkFQmJTqtMuXX3nWb2EjAOyDaztNDbyAW2hGZlwFCgzMzSgD5ARUK8XuIxh4sf/P6zgFkQnz3V\nGj+TSGvZVFHJjCdX8Je3yxk1pDezphQyemh21GmJNEtLZk/lhB4GZtYduBhYDbwIXBmaTQWeCq/n\nhm3C/hc8fmF3LnBNmF01HCgAXgcWAQVhNlYG8cHyuc3NVyQq1XUxVmzexX98eiRPTTtXBUM6tZb0\nNAYD94VxjRRgjrv/0cxWAQ+b2U+AN4C7Q/u7gf8zsxLiPYxrANx9pZnNAVYBtcC0cNkLM7sBmAek\nAve4+8oW5CvSbv669j1eWrOdf//USI7P6cnfp1/Y6CC3SGegL/eJtKLtuw9wyzOrefrNLeT3z+LJ\naeeQnZUhamC+AAAKjUlEQVQRdVoijWrql/t0GxGRVlAXcx5YuJGfzVtDVW2Mb15cwFc/ebx6F9Ll\nqGiItILd+2v43z+/zei8bG6eNOqI3+oW6cxUNESaadf+Gma/tpGvnHc8fXtkMPeGc8nt2/2op9CK\ndCYqGiJHyd2Z++YWbvnjair2VTEmry9nHtefof20KJJ0fSoaIk3k7tz18jr+vHobizfu4LTcPvy/\nL36cU3P7RJ2aSLtR0RBpwJ4DNSwp3cmi9RXUxGLcOPFkzIynlm6mNubcMukUPnfmMFJTdClKkouK\nhkiC/3t1A48Ub2LVlt3EHFJTjHHH9ftg/5PTztGMKElqKhqSdNydTRX7eX1DBYvWV/DGph08Oe0c\nsjLS2LW/hp6ZadxwwQjGDu/P6XnZ9Mj88H+Tx+ak6maBktRUNKTLi8WcmDtpqSksWL2NHzyxnG27\nqwDo0z2dj+f3ZWdlDVkZadxwYQE3XFjQ4Hm01KqIioZ0QdW1MZZv3sWi0JMo3riDW684lYmnDuaY\nPt0YO7w/Y/P78vHh/ThhYC9SmjguMWPGhwWjXmVlPK6iIclCRYP4X5C65NB57auqZW9VLYN6d2Pr\nrv1c8LOXOFATA+C4AT2YcMoxDM7uDsApx/bhl9ee3qz30VKrIioauuTQidQX97LyKnJH7+CcyyvY\n072ClVt2M2n0sfz86tEc07sbXz5nOKcO6UNhfj9yemW22vtrqVUR3bCQ/PyGfxEMGwYbNhzde3f1\nHktb/nw1dTHSU+N36l9SuoP15ft4f18V7++t5r291WzZmMbc/ziFyko49p9fIr3/Prw2heF9svnU\n2H6cd0IOY4f3a+RdWubgPzAgvtTqrFld67+zJCfdsLCJWuuSQ3v2WKIoTkf789XFnB2V1by/t5r3\n91axa38NE08dHD/Xaxt5eU057++L73t/bzXdMlJZNONiAH7z4jv8efU2ADLSUsjpmcnmlb0+eO+K\nF0biVWlUvdsHy03luz9s0x/9A1pqVUQ9jVbrabRmj+VI2vOv3bqYU1VbR1VNjNMLY2xckwGeQlqf\nSjIG7SIlq5r+x1YzpSj+i/9/rj6Nbump/PT5t7jz5Xc4+J9WycyJpKWm8NPn3+KFt7bTv2cG/Xtk\n0r9nBgN7deP6848HoPT9Shynf89MemSkYmakpHDI+QDMIBZr3Z9bJBk1tafR7KJhZkOB+4FjgBgw\ny91/YWb9gEeAfGADcLW777D4Xdx+AVwGVAJfdPcl4VxTgX8Pp/6Ju98X4mOAe4HuwLPAN7yRhI+2\naLTWL+HGfqnFYh7aGbGYs6+6llgM6typC1NCe2am0SMzjQM1dWzeuZ9YzD/cH4Pcvt05/ZQMSrfW\nkDFoN5YWw1LrsLQYOYNi/O3J/gzJ7s769/Yxd+kWqmrrqK6NUVUbo6q2jqLzjmfEwJ78veQ9fv1S\nCVU1H+6rro3x2y8UcuIxvXjo9VJ++OQKamMf/YE2zzqf2h096D32Hfpe8NYH8eysdPr1yGDOV85i\nQM9MXlqznTdKdzKgZwb9QlEY0DOD4wb0bPJMpYO1V1EWSVbtcXmqFviOuy8xs17AYjObD3wRWODu\nt5rZdGA68H1gIvGlXAuAM4E7gTNDkbkJKAQ8nGeuu+8IbYqAhcSLxgTguRbkfIjESw47j11L9pYC\nZs6Eu7e+xG9/6jj+wV+yV47J5VuXnMCBmjo+8dMXcY9/UcyBvG84O14bzu5XC0jJqmLIV1/ADCzF\nyZ8e/+U7feJJfPWTx1NaUcn5P3vpkFxuuXwUXxg3jJLte/nUL/96yP6fX30apaW5ZAzZwzGfW3jI\n/uVlYxiS3Z0N7+/j9j+/TVqKkZmWQmZ6KhmpKVxVGF9yPeZQVRMjMz2F3t3T423SUuiWHh9TOHlw\nb4rOO47MtFQy0+P7fvyjVGKV8cWE9q0awv71OcQqM8jNyWDp+o+uGnz+iQM5/8SBzfnPcVgzZzZc\n3GfObNW3EZFGNLtouPtWYGt4vcfMVgNDgEnA+aHZfcBLxIvGJOD+0FNYaGbZZjY4tJ3v7hUAofBM\nMLOXgN7u/mqI3w9cTisXDYgXjsmTYc6iblz98Xis+JFs3J0UMzBIMeO4nPgaCSlmXHzyQMwMC9tr\n18K8Xb3jn01NKnuW5JOeZkycAKedaqSkGIXD+gLQt0cGMy47mZQUI9Xit6pISTE+nh8fyB3aN4tf\nXDOaFLP4vvB8yrG9ycuD0nd78e5DZ0JdCl6bitemcOygVD55c3ym0HkFObzzn5cd9r5I5xYM4NyC\nAYf9PEYPzT5kHeuML0PRwngXsW5vN+r2dov/0v5Jcz/1o6PxBJEOwt1b/CB+KaoU6A3sPGjfjvD8\nR+DchPgC4r2L7wL/nhD/YYgVAn9OiH8C+GNjuYwZM8aj8sAD7sOGuZvFnx94oG3eIysr3sepf2Rl\ntc17NfTebf3ziUg0gGJvwu/7Fs+eMrOewGPAN9199xEWoGlohzcj3lAORcQvY5EX4aT5+h5LW78H\nRPMXd3v8fCLSsaU03uTwzCydeMGY7e6Ph/C2cNmJ8Lw9xMuAoQmH5wJbGonnNhA/hLvPcvdCdy/M\nyclpyY/UKUyeHB/8jcXiz/pFLiLtpdlFI8yGuhtY7e4/T9g1F5gaXk8FnkqIT7G4ccAuj4+LzAPG\nm1lfM+sLjAfmhX17zGxceK8pCecSEZEItOTy1DnAF4DlZrY0xH4A3ArMMbPriI9zXBX2PUt8um0J\n8fHULwG4e4WZ3QIsCu1u9jAoDlzPh1Nun6MNBsFFRKTpkv7LfSIi0vTvabRoTENERJKLioaIiDSZ\nioaIiDRZl7rLbfi+xntm1sBdipLaAOC9qJPoYPSZNEyfS8OS4XMZ1pRGXWog3MyKmzKQk2z0uRxK\nn0nD9Lk0TJ/Lh3R5SkREmkxFQ0REmqyrFY1ZUSfQQelzOZQ+k4bpc2mYPpegS41piIhI2+pqPQ0R\nEWlDXa5omNl/m9lbZrbMzJ4ws+zGj+r6zOwqM1tpZjEzS+pZIGY2wczWmFlJWF0y6ZnZPWa23cxW\nRJ1LR2FmQ83sRTNbHf7f+UbUOXUEXa5oAPOBUe7+MeBt4MaI8+koVgBXAH+JOpEomVkq8Gviyw+P\nBK41s5HRZtUh3Et8OWX5UP2S1icD44Bp+rfSBYuGu//J3WvD5kI+uiZH0nL31e6+Juo8OoCxQIm7\nr3P3auBh4ksRJzV3/wtQ0WjDJOLuW919SXi9B6hf0jqpdbmicZAvo9upy0cNATYlbJehXwTSCDPL\nB04HXos2k+h1ytuImNmfgWMa2DXD3Z8KbWYQ717Obs/cotSUz0WavoywCBy6pHXU+UStUxYNd7/4\nSPvNbCrwKeAiT6I5xY19LgIcfnlhkUMcZknrpNblLk+Z2QTg+8Bn3L0y6nykw1kEFJjZcDPLAK4h\nvhSxyEccYUnrpNbligbwK6AXMN/MlprZXVEn1BGY2WfNrAw4C3jGzOZFnVMUwiSJG4ivTb8amOPu\nK6PNKnpm9hDwKnCimZWF5ZqTXf2S1heG3yVLzeyyqJOKmr4RLiIiTdYVexoiItJGVDRERKTJVDRE\nRKTJVDRERKTJVDRERKTJVDRERKTJVDRERKTJVDRERKTJ/j/SwRKvAydlXgAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10ed7ec50>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Zmax:', 99657.64200159855, 'K1:', 22.5708411603634, 'm1:', 1.003855433574965, 'beta:', 20898.960116300932, 'C:', 0.17454681787806803)\n"
+     ]
+    }
+   ],
+   "source": [
+    "fig=plt.figure()\n",
+    "ax=fig.add_subplot(111)\n",
+    "ax.plot(np.log10(x+1e-2),y,'bo')\n",
+    "params,params_cov=optimize.curve_fit(gfp_fit_v2,x,y,p0=[100000.0,20.0,0.0,0.0,0.0],bounds=([0,0,0,0,0],[np.inf,np.inf,np.inf,np.inf,y[-1]]))\n",
+    "ax.plot(np.log10(x+1e-2),gfp_fit_v2(x,params[0],params[1],params[2],params[3],params[4]),ls='--')\n",
+    "plt.show()\n",
+    "print(\"Zmax:\",params[0],\"K1:\",params[1],\"m1:\",params[2],\"beta:\",params[3],\"C:\",params[4])"
    ]
   },
   {
