--- a/curve_fit.ipynb
+++ b/curve_fit.ipynb
@@ -8,6 +8,9 @@
    },
    "outputs": [],
    "source": [
+    "# These lines import relevant python packages, using the command 'import'.\n",
+    "# In this example, packages used are numpy (renamed as np), matplotlib.pyplot (renamed as plt, the dot represents subpacksge)\n",
+    "# and the optimize package from scipy.\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy import optimize"
@@ -21,12 +24,13 @@
    },
    "outputs": [],
    "source": [
+    "# Read the input data for x (typically inducer conentrations) and y (typicall florescence measures)\n",
+    "\n",
     "#x=np.array([5.86,2.93,1.465,0.7325,0.36625,0.183125,0.091563,0.045781,0.022891,0.011445,0.005723,0])\n",
     "#y=np.array([91523.7,90715.8,87582.3,71583.8,51311,34180.9,30596.2,29253.2,30259.8,26771.3,26320.3,25208.3])\n",
     "\n",
     "x=np.array([400,133.3333333,44.44444444,14.81481481,4.938271605,1.646090535,0.548696845,0.182898948,0.060966316,0.020322105,0.0067740350,0])\n",
-    "y=np.array([90789.0,102172.4667,89830.43333,72608.56667,55563.96667,31565.4,23711.1,22009.26667,21549.7,21397.53333,21825.3,22435.86667\n",
-    "])"
+    "y=np.array([90789.0,102172.4667,89830.43333,72608.56667,55563.96667,31565.4,23711.1,22009.26667,21549.7,21397.53333,21825.3,22435.86667])"
    ]
   },
   {
@@ -37,6 +41,10 @@
    },
    "outputs": [],
    "source": [
+    "# define the fitting functions. The two functions are provided with input x and parameters including Zmax, Keff, neff, beta.\n",
+    "# the output of the functions are typically gfp levels\n",
+    "# users can define new fitting functions\n",
+    "\n",
     "def gfp_fit_v1(x, Zmax, Keff, neff, beta):\n",
     "    gfp=Zmax*(x/Keff)**neff/(1.0+(x/Keff)**neff)+beta\n",
     "    return gfp\n",
@@ -72,13 +80,36 @@
     }
    ],
    "source": [
+    "# plot the fitting data and the experiment data using the first fitting function gfp_fit_v1\n",
+    "\n",
+    "# define a figure object\n",
     "fig=plt.figure()\n",
+    "# define an axis object from the figure\n",
     "ax=fig.add_subplot(111)\n",
+    "# plot data using the command (ax.plot(x,y)), here the horizontal axis is in log scale\n",
+    "# 'bo' specifies the experiment data are plotted in blue bubble dots\n",
     "ax.plot(np.log10(x+1e-2),y,'bo')\n",
+    "\n",
+    "# Use the curve_fit function in the optimize package to curve fit. The reference guide for this function can be found\n",
+    "# https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.curve_fit.html\n",
+    "# gfp_fit_v1 species the fitting function, x is the input, y is the expected output. \n",
+    "# p0 species the initial guess for the parameters Zmax as 92000, Keff as 20.0, neff as 0, and beta as 0. These number as arbitary.\n",
+    "# bounds (bounds=([Zmax_low, Keff_low, neff_low, beta_low],[Zmax_high, Keff_high, neff_high, beta_high])) specifies the lower bounds and upper bounds for the parameters in the order Zmax, Keff, neff and beta.\n",
+    "# for example, the lower bound of Zmax is 0, and upper bound is infinity.\n",
+    "# the fitted parameters are stored in params. params[0] is Zmax, params[1] is Keff and so on\n",
     "params,params_cov=optimize.curve_fit(gfp_fit_v1,x,y,p0=[92000.0,20.0,0.0,0.0],bounds=([0,0,0,0],[np.inf,np.inf,np.inf,y[-1]]))\n",
+    "\n",
+    "# plot using the fitted data. The fitted data is generated using the command gfp_fit_v1(x,params[0],params[1],params[2],params[3])\n",
+    "# ls='--' means linestyle is in dashed line\n",
     "ax.plot(np.log10(x+1e-2),gfp_fit_v1(x,params[0],params[1],params[2],params[3]),ls='--')\n",
+    "\n",
+    "# save the figure as 'fit1.png'\n",
     "fig.savefig('fit1.png')\n",
+    "\n",
+    "# display the figure below\n",
     "plt.show()\n",
+    "\n",
+    "# display the parameters\n",
     "print(params)"
    ]
   },
