--- a/curve_fit.ipynb
+++ b/curve_fit.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ximing/miniconda2/lib/python2.7/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
+     ]
+    }
+   ],
    "source": [
     "# These lines import relevant python packages, using the command 'import'.\n",
     "# In this example, packages used are numpy (renamed as np), matplotlib.pyplot (renamed as plt, the dot represents subpacksge)\n",
@@ -18,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -30,12 +39,12 @@
     "#y=np.array([91523.7,90715.8,87582.3,71583.8,51311,34180.9,30596.2,29253.2,30259.8,26771.3,26320.3,25208.3])\n",
     "\n",
     "x=np.array([400,133.3333333,44.44444444,14.81481481,4.938271605,1.646090535,0.548696845,0.182898948,0.060966316,0.020322105,0.0067740350,0])\n",
-    "y=np.array([90789.0,102172.4667,89830.43333,72608.56667,55563.96667,31565.4,23711.1,22009.26667,21549.7,21397.53333,21825.3,22435.86667])"
+    "gfp=np.array([90789.0,102172.4667,89830.43333,72608.56667,55563.96667,31565.4,23711.1,22009.26667,21549.7,21397.53333,21825.3,22435.86667])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +60,17 @@
     "\n",
     "def gfp_fit_v2(x,Zmax,K1,m1,beta,C):\n",
     "    gfp=Zmax*(x/K1)**m1/(1+(x/K1)**m1+C)/(1+C)+beta\n",
-    "    return gfp"
+    "    return gfp\n",
+    "\n",
+    "def gfp_fit_v3(x,C,n1,n2,n3):\n",
+    "# have to know the Kd1,alpha, beta before fitting\n",
+    "# z is the measured gfp\n",
+    "    beta=Zmax/Kd3\n",
+    "    alpha=ymax/Kd2\n",
+    "    X=x/Kd1\n",
+    "    z=beta*(C+X**n1)*(X**n3+1.0)**n2/(X**n1+1.0)/(alpha+(X**n3+1.0)**n2)\n",
+    "    \n",
+    "    return z"
    ]
   },
   {
@@ -143,11 +162,41 @@
     "fig=plt.figure()\n",
     "ax=fig.add_subplot(111)\n",
     "ax.plot(np.log10(x+1e-2),y,'bo')\n",
-    "params,params_cov=optimize.curve_fit(gfp_fit_v2,x,y,p0=[100000.0,10.0,0.0,0.0,0.0],bounds=([y[0],0,0,0,0],[np.inf,np.inf,np.inf,np.inf,y[-1]]))\n",
+    "params,params_cov=opt2imize.curve_fit(gfp_fit_v2,x,y,p0=[100000.0,10.0,0.0,0.0,0.0],bounds=([y[0],0,0,0,0],[np.inf,np.inf,np.inf,np.inf,y[-1]]))\n",
     "ax.plot(np.log10(x+1e-2),gfp_fit_v2(x,params[0],params[1],params[2],params[3],params[4]),ls='--')\n",
     "plt.show()\n",
     "fig.savefig('fit2.png')\n",
     "print(\"Zmax:\",params[0],\"K1:\",params[1],\"m1:\",params[2],\"beta:\",params[3],\"C:\",params[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'opt2imize' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-d3f21096337d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_subplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m111\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog10\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1e-2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgfp\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'bo'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparams_cov\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mopt2imize\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcurve_fit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgfp_fit_v3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgfp\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mp0\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1.6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1.1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbounds\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1.5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1.0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1.5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog10\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1e-2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgfp_fit_v3\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mls\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'--'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'opt2imize' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "fig=plt.figure()\n",
+    "ax=fig.add_subplot(111)\n",
+    "ax.plot(np.log10(x+1e-2),gfp,'bo')\n",
+    "params,params_cov=optimize.curve_fit(gfp_fit_v3,x,gfp,p0=[0.0,0.6,1.6,1.1],bounds=([0,0.5,1.5,1.0],[np.inf,1.0,2.0,1.5]))\n",
+    "ax.plot(np.log10(x+1e-2),gfp_fit_v3(x,params[0],params[1],params[2],params[3]),ls='--')\n",
+    "plt.show()\n",
+    "fig.savefig('fit3.png')\n",
+    "print(\"C:\",params[0],\"n1:\",params[1],\"n2:\",params[2],\"n3:\",params[3])"
    ]
   },
   {
