--- a/curve_fit.ipynb
+++ b/curve_fit.ipynb
@@ -33,13 +33,16 @@
    },
    "outputs": [],
    "source": [
-    "# Read the input data for x (typically inducer conentrations) and y (typicall florescence measures)\n",
+    "# Read the input data for x (typically inducer conentrations) and gfp (typicall florescence measures)\n",
     "\n",
     "#x=np.array([5.86,2.93,1.465,0.7325,0.36625,0.183125,0.091563,0.045781,0.022891,0.011445,0.005723,0])\n",
     "#y=np.array([91523.7,90715.8,87582.3,71583.8,51311,34180.9,30596.2,29253.2,30259.8,26771.3,26320.3,25208.3])\n",
     "\n",
-    "x=np.array([400,133.3333333,44.44444444,14.81481481,4.938271605,1.646090535,0.548696845,0.182898948,0.060966316,0.020322105,0.0067740350,0])\n",
-    "gfp=np.array([90789.0,102172.4667,89830.43333,72608.56667,55563.96667,31565.4,23711.1,22009.26667,21549.7,21397.53333,21825.3,22435.86667])"
+    "#x=np.array([400,133.3333333,44.44444444,14.81481481,4.938271605,1.646090535,0.548696845,0.182898948,0.060966316,0.020322105,0.0067740350,0])\n",
+    "#gfp=np.array([90789.0,102172.4667,89830.43333,72608.56667,55563.96667,31565.4,23711.1,22009.26667,21549.7,21397.53333,21825.3,22435.86667])\n",
+    "\n",
+    "x=np.array([200,100,50,25,12.5,6.25,3.125,1.5625,0.78125,0.390625,0.1953125,0])\n",
+    "gfp=np.array([6239.2,17725.1,12695,9997.5,7104.8,4703.1,3311.3,2603.3,2426.5,2262.4,2148.7,1995.4])"
    ]
   },
   {
@@ -107,7 +110,7 @@
     "ax=fig.add_subplot(111)\n",
     "# plot data using the command (ax.plot(x,y)), here the horizontal axis is in log scale\n",
     "# 'bo' specifies the experiment data are plotted in blue bubble dots\n",
-    "ax.plot(np.log10(x+1e-2),y,'bo')\n",
+    "ax.plot(np.log10(x+1e-2),gfp,'bo')\n",
     "\n",
     "# Use the curve_fit function in the optimize package to curve fit. The reference guide for this function can be found\n",
     "# https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.curve_fit.html\n",
@@ -116,7 +119,7 @@
     "# bounds (bounds=([Zmax_low, Keff_low, neff_low, beta_low],[Zmax_high, Keff_high, neff_high, beta_high])) specifies the lower bounds and upper bounds for the parameters in the order Zmax, Keff, neff and beta.\n",
     "# for example, the lower bound of Zmax is 0, and upper bound is infinity.\n",
     "# the fitted parameters are stored in params. params[0] is Zmax, params[1] is Keff and so on\n",
-    "params,params_cov=optimize.curve_fit(gfp_fit_v1,x,y,p0=[92000.0,20.0,0.0,0.0],bounds=([0,0,0,0],[np.inf,np.inf,np.inf,y[-1]]))\n",
+    "params,params_cov=optimize.curve_fit(gfp_fit_v1,x,gfp,p0=[92000.0,20.0,0.0,0.0],bounds=([0,0,0,0],[np.inf,np.inf,np.inf,y[-1]]))\n",
     "\n",
     "# plot using the fitted data. The fitted data is generated using the command gfp_fit_v1(x,params[0],params[1],params[2],params[3])\n",
     "# ls='--' means linestyle is in dashed line\n",
@@ -161,8 +164,8 @@
    "source": [
     "fig=plt.figure()\n",
     "ax=fig.add_subplot(111)\n",
-    "ax.plot(np.log10(x+1e-2),y,'bo')\n",
-    "params,params_cov=opt2imize.curve_fit(gfp_fit_v2,x,y,p0=[100000.0,10.0,0.0,0.0,0.0],bounds=([y[0],0,0,0,0],[np.inf,np.inf,np.inf,np.inf,y[-1]]))\n",
+    "ax.plot(np.log10(x+1e-2),gfp,'bo')\n",
+    "params,params_cov=opt2imize.curve_fit(gfp_fit_v2,x,gfp,p0=[100000.0,10.0,0.0,0.0,0.0],bounds=([y[0],0,0,0,0],[np.inf,np.inf,np.inf,np.inf,y[-1]]))\n",
     "ax.plot(np.log10(x+1e-2),gfp_fit_v2(x,params[0],params[1],params[2],params[3],params[4]),ls='--')\n",
     "plt.show()\n",
     "fig.savefig('fit2.png')\n",
@@ -171,23 +174,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'opt2imize' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-d3f21096337d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_subplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m111\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog10\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1e-2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgfp\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'bo'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparams_cov\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mopt2imize\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcurve_fit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgfp_fit_v3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgfp\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mp0\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1.6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1.1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbounds\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1.5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1.0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1.5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog10\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1e-2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgfp_fit_v3\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mls\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'--'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'opt2imize' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fig=plt.figure()\n",
     "ax=fig.add_subplot(111)\n",
@@ -198,15 +189,6 @@
     "fig.savefig('fit3.png')\n",
     "print(\"C:\",params[0],\"n1:\",params[1],\"n2:\",params[2],\"n3:\",params[3])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
